# dontbeevilmirror

./: .gitignore  README.md  pyproject.toml
app/: .gitignore  settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/main/: AndroidManifest.xml
app/app/src/main/kotlin/codes/radian/dontbeevil/: MainActivity.kt  SearchFragment.kt  SettingsFragment.kt  UpdatesFragment.kt
app/app/src/main/kotlin/dontbeevilapp/: App.kt
app/app/src/main/res/color/: navbar_foreground_dynamic.xml
app/app/src/main/res/layout/: activity_main.xml  fragment_search.xml  fragment_settings.xml  fragment_updates.xml
app/app/src/main/res/menu/: bottom_navigation_menu.xml  navbar_menu.xml
app/app/src/main/res/navigation/: navbar_graph.xml
app/app/src/main/res/values/: colors.xml
evilcli/: pyproject.toml
evilcli/dontbeevilmirror/cli/: __main__.py
googlecurl/: go.mod  go.sum  main.go
gplayapi/: pyproject.toml
gplayapi/dontbeevilmirror/api/: __init__.py  constants.py  google_play.proto
gplayapi/dontbeevilmirror/googlecurl/: __init__.py
gplayapi/dontbeevilmirror_test/live/: test_search.py
raccoonproxy/: main.py  pyproject.toml
server/: .env.sample  Dockerfile  docker-compose.yml  pyproject.toml  start.sh
server/db/migrations/: 20230401193225_init.sql
server/dontbeevilmirror/server/: __init__.py  b2mock.py  copier.py  db.py  gplay.py  logging.py  routes.py  util.py
