[tool.poetry]
name = "gplayapi"
version = "0.1.0"
description = "Library for searching and downloading APKs from Google Play using account credentials"
authors = ["Radian LLC <ops+dontbeevilmirror@radian.codes>"]
readme = "../README.md"
packages = [
  { include = "dontbeevilmirror" }
]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
