[tool.poetry]
name = "raccoonproxy"
version = "0.1.0"
description = "Dev proxy for reverse engineering Raccoon"
authors = ["Radian LLC <contact+dontbeevilproxy@radian.codes>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
